...
      const val PREVIEW = "camera_preview"
    }

    object Utils {
      // PLATE SWIPE SCAFFOLD
      const val SEARCH_BAR = "searchBar"
      const val TOP_BAR = "topBar"
      const val TOP_BAR_TITLE = "topBarTitle"
      const val BACK_ARROW_ICON = "backArrowIcon"
      const val EDIT_ACCOUNT_ICON = "editAccountIcon"
      const val PLATESWIPE_SCAFFOLD = "plateSwipeScaffold"
      const val CHEF_HAT_ICON = "chefHatIcon"
      const val BOTTOM_BAR = "bottomNavigationMenu"
      const val TEST_TAG = "TagTestTag"
    }

    object SwipePage {
      const val FILTER = "filter"
      const val FILTER_ROW = "filterRow"
...
      const val RECIPE_NAME = "recipeName"
      const val ADD_INGREDIENT_ICON = "addIngredientIcon"
      const val NEXT_STEP_BUTTON = "nextStepButton"
    }

    object FilterPage {
      const val TEST_TAG_TIME_RANGE_SLIDER = "timeRangeSlider"
      const val TEST_TAG_DIFFICULTY = "difficulty"
      const val TEST_TAG_CATEGORY = "category"
    }

    object Instruction {
      const val DEFAULT_ICON = ICON_CHEF_HAT
...
