...
    <string name="take_photo">Take Photo</string>

    //SwipePage
    <string name="filter_icon">Filter Icon</string>

    //FilterPage
    <string name="apply_filter">Apply</string>
    <string name="reset_filter">Reset</string>
    <string name="time_range_name">Time</string>
    <string name="price_range_name">Price</string>
    <string name="difficulty_name">Difficulty</string>
    <string name="category_name">Category</string>
    <string name="time_unit">min</string>
    <string name="price_unit">$</string>
...
